# ea-equivalence

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  automorphism.sh  checkDim10.txt  comp.sh  compile.sh  ea.sh  eaAll.py  group.sh  groups.py  hybrid  main.c  merge_files.py  newMain.c  newMain.h  order.sh  orders.py  partition.sh  partitionAll.py  permutation.c  permutation.h  permutation.py  result.txt  structures.c  structures.h  testing_hyrbid_6.txt  testing_hyrbid_8.txt
functions/: group.c  group.h  innerPermutation.c  innerPermutation.h  outerPermutation.c  outerPermutation.h  partition.c  partition.h  permutation.c  permutation.h  walshTransform.c  walshTransform.h
resources/TT_library/dim10/: q_10_1.tt  (+20 more)
results/: hybrid_12_1.txt  q_8_c8_c11.txt  testing_hyrbid_8.txt
results/comp_test/: allDim6.txt  allDim6_cp.txt  allDim8.txt  allDim8_1.txt  allDim8_cp.txt  walshDim6.txt  walshDim8.txt
results/computationally_testing/: runtime_dim10_q_10_1.tt.txt  runtime_dim10_q_10_2.tt.txt  runtime_dim6_q_6_1.tt.txt  runtime_dim6_q_6_2.tt.txt  runtime_dim6_q_6_3.tt.txt  runtime_dim6_q_6_4.tt.txt  runtime_dim8_classic_1.tt.txt  runtime_dim8_classic_2.tt.txt  runtime_dim8_classic_3.tt.txt  runtime_dim8_classic_4.tt.txt
results/dim10/: q_10_1.txt
scripts/: eaAll.py  hybridAll.py  merge_files.py  permutation.py  testing.py
src/: CMakeLists.txt  automorphism.c  ea.c  eaFull.c  group.c  group.h  hybrid.c  main.c  order.c  order.h  partition.c  permutation.c  permutation.h  structures.c  structures.h
src/functions/: computationOfMultiplicities.c  computationOfMultiplicities.h  partition.c  partition.h  permutation.c  permutation.h
src/resources/TT_library/dim8/: classic_11.tt  classic_12.tt  classic_2.tt  classic_22.tt
src/utils/: fileParser.c  fileParser.h  structs.c  structs.h
thesis/: references.bib  thesis.tex
thesis/section/: introduction.tex
utils/: basis.c  basis.h  compareTruthTable.c  compareTruthTable.h  dataClasses.c  dataClasses.h  dataStructures.c  dataStructures.h  eaTest.c  eaTest.h  fileParser.c  fileParser.h  freeMemory.c  freeMemory.h  inverse.c  inverse.h  linkedList.c  linkedList.h  parser.c  parser.h  runTime.c  runTime.h  structs.h  truthTable.c  truthTable.h
walshTransform/: walshTransform.c  walshTransform.h
(+27240 files in other folders)
